--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -29,7 +29,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
-                <a href="" class="navbar-brand">Suman</a>
+                <a href="" class="navbar-brand">DevFolio</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -698,42 +698,43 @@
         
         
         <!-- Contact Start -->
-        <div class="contact wow fadeInUp" data-wow-delay="0.1s" id="contact">
-            <div class="container-fluid">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-md-4"></div>
-                        <div class="col-md-8">
-                            <div class="contact-form">
-                                <div id="success"></div>
-                                <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                                    <div class="control-group">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
-                                        <p class="help-block"></p>
-                                    </div>
-                                    <div class="control-group">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
-                                        <p class="help-block"></p>
-                                    </div>
-                                    <div class="control-group">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject"/>
-                                        <p class="help-block"></p>
-                                    </div>
-                                    <div class="control-group">
-                                        <textarea class="form-control" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
-                                        <p class="help-block"></p>
-                                    </div>
-                                    <div>
-                                        <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
-                                    </div>
-                                </form>
+<div class="contact wow fadeInUp" data-wow-delay="0.1s" id="contact">
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-4"></div>
+                <div class="col-md-8">
+                    <div class="contact-form">
+                        <div id="success"></div>
+                        <form name="contactForm" id="contactForm" method="post" action="{% url 'contact' %}" novalidate>
+                            {% csrf_token %}
+                            <div class="control-group">
+                                <input type="text" class="form-control" id="id_name" name="name" placeholder="Your Name" required data-validation-required-message="Please enter your name" />
+                                <p class="help-block"></p>
                             </div>
-                        </div>
+                            <div class="control-group">
+                                <input type="email" class="form-control" id="id_email" name="email" placeholder="Your Email" required data-validation-required-message="Please enter your email" />
+                                <p class="help-block"></p>
+                            </div>
+                            <div class="control-group">
+                                <input type="text" class="form-control" id="id_subject" name="subject" placeholder="Subject" required data-validation-required-message="Please enter a subject"/>
+                                <p class="help-block"></p>
+                            </div>
+                            <div class="control-group">
+                                <textarea class="form-control" id="id_message" name="message" placeholder="Message" required data-validation-required-message="Please enter your message"></textarea>
+                                <p class="help-block"></p>
+                            </div>
+                            <div>
+                                <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Contact End -->
+    </div>
+</div>
+<!-- Contact End -->
 
 
         <!-- Blog Start -->
@@ -747,7 +748,7 @@
                     <div class="col-lg-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
                             <div class="blog-img">
-                                <img src="{% static 'img/blog-1.png' %}" alt="Blog">
+                                <img src="{% static 'img/blogg-1.png' %}" alt="Blog">
                             </div>
                             <div class="blog-text">
                                 <h2>Web Design: Tips and Trends for Stunning Sites</h2>
@@ -767,7 +768,7 @@
                     <div class="col-lg-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
-                                <img src="{% static 'img/blog-2.png' %}" alt="Blog">
+                                <img src="{% static 'img/blogg-2.png' %}" alt="Blog">
                             </div>
                             <div class="blog-text">
                                 <h2>Web Development: Strategies for Powerful Online Experiences</h2>
@@ -798,7 +799,7 @@
                         <h2>Suman Bhatta</h2>
                         <h3>Kathmandu, Nepal</h3>
                         <div class="footer-menu">
-                            <p>+977-9842262427</p><br>
+                            <p>+977-9842262427</p>
                             <p>sumanbhatta735@gmail.com</p>
                         </div>
                         <div class="footer-social">
