--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -698,43 +698,55 @@
         
         
         <!-- Contact Start -->
-<div class="contact wow fadeInUp" data-wow-delay="0.1s" id="contact">
-    <div class="container-fluid">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-4"></div>
-                <div class="col-md-8">
-                    <div class="contact-form">
-                        <div id="success"></div>
-                        <form name="contactForm" id="contactForm" method="post" action="{% url 'contact' %}" novalidate>
-                            {% csrf_token %}
-                            <div class="control-group">
-                                <input type="text" class="form-control" id="id_name" name="name" placeholder="Your Name" required data-validation-required-message="Please enter your name" />
-                                <p class="help-block"></p>
-                            </div>
-                            <div class="control-group">
-                                <input type="email" class="form-control" id="id_email" name="email" placeholder="Your Email" required data-validation-required-message="Please enter your email" />
-                                <p class="help-block"></p>
-                            </div>
-                            <div class="control-group">
-                                <input type="text" class="form-control" id="id_subject" name="subject" placeholder="Subject" required data-validation-required-message="Please enter a subject"/>
-                                <p class="help-block"></p>
-                            </div>
-                            <div class="control-group">
-                                <textarea class="form-control" id="id_message" name="message" placeholder="Message" required data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block"></p>
-                            </div>
-                            <div>
-                                <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
-                            </div>
-                        </form>
+    <div class="contact wow fadeInUp" data-wow-delay="0.1s" id="contact">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-8">
+                        <div class="contact-form">
+                            <div id="success"></div>
+                            <form name="contactForm" id="contactForm" method="post" action="{% url 'contact' %}" novalidate>
+                                {% csrf_token %}
+                                <div class="control-group">
+                                    <input type="text" class="form-control" id="id_name" name="name" placeholder="Your Name" required data-validation-required-message="Please enter your name" value="{{ form.name.value|default_if_none:'' }}"/>
+                                    <p class="help-block"></p>
+                                    {% for error in form.name.errors %}
+                                        <p class="text-danger">{{ error }}</p>
+                                    {% endfor %}
+                                </div>
+                                <div class="control-group">
+                                    <input type="email" class="form-control" id="id_email" name="email" placeholder="Your Email" required data-validation-required-message="Please enter your email" value="{{ form.email.value|default_if_none:'' }}"/>
+                                    <p class="help-block"></p>
+                                    {% for error in form.email.errors %}
+                                        <p class="text-danger">{{ error }}</p>
+                                    {% endfor %}
+                                </div>
+                                <div class="control-group">
+                                    <input type="text" class="form-control" id="id_subject" name="subject" placeholder="Subject" required data-validation-required-message="Please enter a subject" value="{{ form.subject.value|default_if_none:'' }}"/>
+                                    <p class="help-block"></p>
+                                    {% for error in form.subject.errors %}
+                                        <p class="text-danger">{{ error }}</p>
+                                    {% endfor %}
+                                </div>
+                                <div class="control-group">
+                                    <textarea class="form-control" id="id_message" name="message" placeholder="Message" required data-validation-required-message="Please enter your message">{{ form.message.value|default_if_none:'' }}</textarea>
+                                    <p class="help-block"></p>
+                                    {% for error in form.message.errors %}
+                                        <p class="text-danger">{{ error }}</p>
+                                    {% endfor %}
+                                </div>
+                                <div>
+                                    <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Contact End -->
+    <!-- Contact End -->
 
 
         <!-- Blog Start -->
