--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -417,101 +417,97 @@
         
         
         <!-- Price Start -->
-        <div class="price" id="price">
-            <div class="container">
-                <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>Pricing Plan</p>
-                    <h2>Affordable Price</h2>
+<div class="price" id="price">
+    <div class="container">
+        <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
+            <p>Pricing Plan</p>
+            <h2>Affordable Price</h2>
+        </div>
+        <div class="row">
+            <div class="col-md-4 wow fadeInUp" data-wow-delay="0.0s">
+                <div class="price-item">
+                    <div class="price-header">
+                        <div class="price-title">
+                            <h2>Basic Plan</h2>
+                        </div>
+                        <div class="price-prices">
+                            <h2><small>$</small>49<span>/ mo</span></h2>
+                        </div>
+                    </div>
+                    <div class="price-body">
+                        <div class="price-description">
+                            <ul>
+                                <li>1 GB Disk Space</li>
+                                <li>10 Email Accounts</li>
+                                <li>24/7 Support</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="price-footer">
+                        <div class="price-action">
+                            <a class="btn" href="">Order Now</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="price-item">
-                            <div class="price-header">
-                                <div class="price-title">
-                                    <h2>Basic</h2>
-                                </div>
-                                <div class="price-prices">
-                                    <h2><small>$</small>49<span>/ mo</span></h2>
-                                </div>
-                            </div>
-                            <div class="price-body">
-                                <div class="price-description">
-                                    <ul>
-                                        <li>Bootstrap 4</li>
-                                        <li>Font Awesome 5</li>
-                                        <li>Responsive Design</li>
-                                        <li>Browser Compatibility</li>
-                                        <li>Easy To Use</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="price-footer">
-                                <div class="price-action">
-                                    <a class="btn" href="">Order Now</a>
-                                </div>
-                            </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="price-item">
+                    <div class="price-header">
+                        <div class="price-title">
+                            <h2>Standard Plan</h2>
+                        </div>
+                        <div class="price-prices">
+                            <h2><small>$</small>99<span>/ mo</span></h2>
                         </div>
                     </div>
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.0s">
-                        <div class="price-item featured-item">
-                            <div class="price-header">
-                                <div class="price-title">
-                                    <h2>Standard</h2>
-                                </div>
-                                <div class="price-prices">
-                                    <h2><small>$</small>99<span>/ mo</span></h2>
-                                </div>
-                            </div>
-                            <div class="price-body">
-                                <div class="price-description">
-                                    <ul>
-                                        <li>Bootstrap 4</li>
-                                        <li>Font Awesome 5</li>
-                                        <li>Responsive Design</li>
-                                        <li>Browser Compatibility</li>
-                                        <li>Easy To Use</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="price-footer">
-                                <div class="price-action">
-                                    <a class="btn" href="">Order Now</a>
-                                </div>
-                            </div>
+                    <div class="price-body">
+                        <div class="price-description">
+                            <ul>
+                                <li>5 GB Disk Space</li>
+                                <li>50 Email Accounts</li>
+                                <li>24/7 Support</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="price-item">
-                            <div class="price-header">
-                                <div class="price-title">
-                                    <h2>Premium</h2>
-                                </div>
-                                <div class="price-prices">
-                                    <h2><small>$</small>149<span>/ mo</span></h2>
-                                </div>
-                            </div>
-                            <div class="price-body">
-                                <div class="price-description">
-                                    <ul>
-                                        <li>Bootstrap 4</li>
-                                        <li>Font Awesome 5</li>
-                                        <li>Responsive Design</li>
-                                        <li>Browser Compatibility</li>
-                                        <li>Easy To Use</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="price-footer">
-                                <div class="price-action">
-                                    <a class="btn" href="">Order Now</a>
-                                </div>
-                            </div>
+                    <div class="price-footer">
+                        <div class="price-action">
+                            <a class="btn" href="">Order Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="price-item">
+                    <div class="price-header">
+                        <div class="price-title">
+                            <h2>Premium Plan</h2>
+                        </div>
+                        <div class="price-prices">
+                            <h2><small>$</small>149<span>/ mo</span></h2>
+                        </div>
+                    </div>
+                    <div class="price-body">
+                        <div class="price-description">
+                            <ul>
+                                <li>10 GB Disk Space</li>
+                                <li>100 Email Accounts</li>
+                                <li>24/7 Support</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="price-footer">
+                        <div class="price-action">
+                            <a class="btn" href="">Order Now</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Price End -->
+    </div>
+</div>>
+<!-- Price End -->
+
+
         
         
         <!-- Testimonial Start -->
