blog sec complete

--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -497,7 +497,8 @@
                     </div>
                     <div class="price-footer">
                         <div class="price-action">
-                            <a class="btn" href="">Order Now</a>
+                            <a class="btn" href="https://www.example.com/esewa_payment_integration">Order Now</a>
+
                         </div>
                     </div>
                 </div>
