--- a/templates/base/blog_detail.html
+++ b/templates/base/blog_detail.html
@@ -1,4 +1,3 @@
-<!-- blog_detail.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +12,7 @@
             background-color: #f8f9fa;
             margin: 0;
             padding: 0;
+            font-size: 16px; 
         }
         .container {
             width: 80%;
@@ -21,9 +21,11 @@
         }
         h1 {
             margin-top: 0;
+            font-size: 2em; 
         }
         .meta-info {
             margin-bottom: 20px;
+            font-size: 0.8em; 
         }
         .meta-info i {
             margin-right: 5px;
@@ -35,6 +37,7 @@
         }
         .content {
             line-height: 1.6;
+            font-size: 1em; 
         }
         .btn {
             display: inline-block;
@@ -66,3 +69,4 @@
     </div>
 </body>
 </html>
+
